--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "author": "James Frasca <james@roundeights.com>",
     "description": "A small, self-contained JavaScript modal library",
     "license": "MIT",
+    "main": "src/picoModal",
     "repository": {
         "type": "git",
         "url": "https://github.com/Nycto/PicoModal.git"
